--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0-beta.1"
+    "vue": "^3.0.0-beta.1",
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0-alpha.8",
     "@vue/cli-plugin-eslint": "~5.0.0-alpha.8",
+    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~5.0.0-alpha.8",
     "@vue/compiler-sfc": "^3.0.0-beta.1",
     "eslint": "^7.20.0",
