--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-vue": "^7.6.0",
-    "vue-cli-plugin-vue-next": "~0.1.4"
+    "eslint-plugin-vue": "^7.6.0"
   },
   "eslintConfig": {
     "root": true,
