--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.2",
     "core-js": "^3.6.5",
     "vue": "^3.0.0-beta.1",
     "vue-router": "^4.0.0-0"
@@ -20,12 +21,15 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~5.0.0-alpha.8",
     "@vue/compiler-sfc": "^3.0.0-beta.1",
+    "autoprefixer": "^10.2.5",
     "eslint": "^7.20.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-vue": "^7.6.0"
+    "eslint-plugin-vue": "^7.6.0",
+    "postcss": "^8.2.10",
+    "tailwindcss": "^2.1.1"
   },
   "eslintConfig": {
     "root": true,
